# home

./: .env.example  .gitignore  README.md  docker-compose.yml  docker-up.ps1  makefile  start.bat
backend/: .dockerignore  .env  Dockerfile  pyproject.toml  start.py  start.sh
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/routes/: items.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json  vite.config.ts
frontend/src/: App.scss  App.tsx
frontend/src/components/: ConfirmDialog.scss  ConfirmDialog.tsx
frontend/src/hooks/: useItems.ts
frontend/src/services/: api.ts
frontend/src/types/: index.ts
nginx/: nginx.conf
